--- a/src/styles/pages/_shop.scss
+++ b/src/styles/pages/_shop.scss
@@ -25,6 +25,11 @@
             cursor: pointer;
             color: black;
             position: relative;
+
+            &.active {
+                background: black;
+                color: white;
+            }
         }
 
         input {
