--- a/src/styles/UI/_card.scss
+++ b/src/styles/UI/_card.scss
@@ -1,7 +1,7 @@
 .cards {
     margin-top: 65px;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 29px;
 
 
