--- a/src/styles/pages/_shop.scss
+++ b/src/styles/pages/_shop.scss
@@ -13,7 +13,7 @@
             -moz-appearance: none;
             appearance: none;
             text-align: center;
-            line-height: 320%;
+            line-height: 350%;
 
             width: 200px;
             height: 60px;
@@ -25,11 +25,11 @@
             cursor: pointer;
             color: black;
             position: relative;
+        }
 
-            &.active {
-                background: black;
-                color: white;
-            }
+        .filter-option.active{
+            background: black;
+            color: white;
         }
 
         input {
