--- a/src/styles/pages/_shop.scss
+++ b/src/styles/pages/_shop.scss
@@ -140,4 +140,12 @@
             }
         }
     }
+
+    .spinner{
+        display: block;
+        margin: 50px auto 0;
+        width: 130px;
+        height: 130px;
+        opacity: 0.5;
+    }
 }
